# my-setup-files

./: .bashrc  .gvimrc  .tmux.conf  .vimrc  .zshrc  t_1114.1401.txt  t_1114.aaaa.txt  t_20171114.1359  t_2017114.1405_2.txt
PROJECT/: d.txt
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/: ChangeLog  Emacs.ap  Makefile.in  NEWS  README  configure  configure.in  make-dist  rmoldfnt.sh
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Asian/: README  fonts.alias  ind16-mule.bdf  ind16-uni.bdf  ind1c16-mule.bdf  ind1c24-mule.bdf  ind24-mule.bdf  ind24-uni.bdf  isci16-mule.bdf  lao16-mule.bdf  lao18-mule.bdf  lao18b-mule.bdf  lao18i-mule.bdf  thai16.bdf  thai18.bdf  thai18b.bdf  thai18bi.bdf  thai18i.bdf  tib1c16-mule.bdf  tib1c24-mule.bdf  visc18-etl.bdf  visc18b-etl.bdf  visc18bi-etl.bdf  visc18i-etl.bdf  xtis18.bdf  xtis24.bdf
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Chinese/: README  cns1-16.bdf  cns3-16.bdf  cns4-16.bdf  cns5-16.bdf  cns6-16.bdf  cns7-16.bdf
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Chinese.BIG/: README  cns4-40.bdf
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Ethiopic/: README
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/European/: README  koi14-etl.bdf  koi16-etl.bdf  koi24-etl.bdf  lt1-18-etl.bdf  lt1-18b-etl.bdf  lt1-18bi-etl.bdf  lt1-18i-etl.bdf  lt1-24b-etl.bdf  lt1-24bi-etl.bdf  lt1-24i-etl.bdf
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/European.BIG/: README
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Japanese/: README  a18rk.bdf  a18rkb.bdf  a18rki.bdf  fonts.alias  j83-18.bdf  j83-18b.bdf  j83-18i.bdf  j90-16.bdf  jksp16.bdf  jksp24.bdf
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Japanese.BIG/: README  jiskan32.bdf
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Misc/: README
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/TrueType/: README
emacs/ntemacs/.emacs.d/intlfonts-1.2.1/Type1/: lt1-b-omega-serif.afm  lt1-b-omega-serif.pfb  lt1-bi-omega-serif.afm  lt1-bi-omega-serif.pfb  lt1-i-omega-serif.afm  lt1-i-omega-serif.pfb  lt1-r-omega-serif.afm  (+41 more)
(+467 files in other folders)
